--- a/client/bower.json
+++ b/client/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "^1.5.4",
+    "angular-ui-router": "^0.2.18"
+  }
 }
