--- a/client/bower.json
+++ b/client/bower.json
@@ -7,6 +7,7 @@
     "angular": "^1.5.4",
     "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "material-design-lite": "^1.1.3"
   }
 }
