--- a/client/bower.json
+++ b/client/bower.json
@@ -8,6 +8,10 @@
     "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
     "angular-bootstrap": "^1.3.2",
-    "angular-google-maps": "^2.3.2"
+    "angular-google-maps": "^2.3.2",
+    "angular-material": "^1.0.7"
+  },
+  "resolutions": {
+    "angular": "1.5.3"
   }
 }
